--- a/test-output/old/Regression Suite/methods.html
+++ b/test-output/old/Regression Suite/methods.html
@@ -1,42 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:07</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@41496617]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>19/11/06 15:20:23</td>   <td>16377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@2ab0114a]">UserCanContactUs</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:27</td>   <td>20666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@2ab0114a]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:27</td>   <td>20667</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@2ab0114a]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/11/06 15:20:30</td>   <td>23667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWithJavaFakerTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@41496617]">UserCanReguisterSuccessfully</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:36</td>   <td>29575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@41496617]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:36</td>   <td>29575</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@41496617]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="9f8bb1">  <td>19/11/06 15:20:39</td>   <td>32576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@a3ace4]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:43</td>   <td>36175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@a3ace4]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:43</td>   <td>36176</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductAutoTestCase@a3ace4]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="8f92ff">  <td>19/11/06 15:20:46</td>   <td>39177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@24d5a3b8]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:48</td>   <td>41172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@24d5a3b8]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:48</td>   <td>41173</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductTestCase@24d5a3b8]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>19/11/06 15:20:51</td>   <td>44176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@2043b3d5]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:54</td>   <td>47144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@2043b3d5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>19/11/06 15:20:54</td>   <td>47144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@2043b3d5]">UserChangeCurrency</td> 
-  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:56</td>   <td>49261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@2043b3d5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:56</td>   <td>49261</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@2043b3d5]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>19/11/06 15:20:59</td>   <td>52343</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@41496617]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1548833119</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:30:21</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/11/11 12:30:44</td>   <td>23953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">UserCanContactUs</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:30:51</td>   <td>30919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:30:51</td>   <td>30920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="9f8bb1">  <td>19/11/11 12:30:53</td>   <td>32921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWithJavaFakerTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">UserCanReguisterSuccessfully</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:30:59</td>   <td>38418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:30:59</td>   <td>38419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>19/11/11 12:31:01</td>   <td>40420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:07</td>   <td>46040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:07</td>   <td>46040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>19/11/11 12:31:09</td>   <td>48042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:14</td>   <td>53634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:14</td>   <td>53634</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/11/11 12:31:16</td>   <td>55636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:23</td>   <td>62770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/11/11 12:31:23</td>   <td>62770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">UserChangeCurrency</td> 
+  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:25</td>   <td>64534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:25</td>   <td>64534</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/11/11 12:31:28</td>   <td>67077</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
 </table>
