run grid test cases

--- a/test-output/old/Regression Suite/methods.html
+++ b/test-output/old/Regression Suite/methods.html
@@ -1,83 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="fcfece">  <td>19/11/08 16:16:20</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@b5ceafa]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/11/08 16:16:50</td>   <td>30120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@275d46a8]">UserCanContactUs</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:16:56</td>   <td>36412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@275d46a8]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:16:56</td>   <td>36412</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@275d46a8]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/08 16:16:59</td>   <td>39413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWithJavaFakerTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@b5ceafa]">UserCanReguisterSuccessfully</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:09</td>   <td>49109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@b5ceafa]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:09</td>   <td>49109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@b5ceafa]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>19/11/08 16:17:12</td>   <td>52109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@78097df5]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:20</td>   <td>60115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@78097df5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:20</td>   <td>60116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductAutoTestCase@78097df5]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>19/11/08 16:17:23</td>   <td>63116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@28816098]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:29</td>   <td>69331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@28816098]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:29</td>   <td>69331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductTestCase@28816098]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/11/08 16:17:32</td>   <td>72332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@4b3a6383]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:37</td>   <td>76976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@4b3a6383]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/11/08 16:17:37</td>   <td>76976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@4b3a6383]">UserChangeCurrency</td> 
-  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:38</td>   <td>78748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@4b3a6383]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:38</td>   <td>78748</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@4b3a6383]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>19/11/08 16:17:42</td>   <td>81941</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@b5ceafa]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@39263500</td>   <td></td> </tr>
-=======
-<tr bgcolor="687592">  <td>19/11/11 12:30:21</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/11/11 12:30:44</td>   <td>23953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">UserCanContactUs</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:30:51</td>   <td>30919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:30:51</td>   <td>30920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@1ecb3cde]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="9f8bb1">  <td>19/11/11 12:30:53</td>   <td>32921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWithJavaFakerTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">UserCanReguisterSuccessfully</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:30:59</td>   <td>38418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:30:59</td>   <td>38419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>19/11/11 12:31:01</td>   <td>40420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:07</td>   <td>46040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:07</td>   <td>46040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductAutoTestCase@345b515e]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>19/11/11 12:31:09</td>   <td>48042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:14</td>   <td>53634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:14</td>   <td>53634</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductTestCase@29820c06]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/11/11 12:31:16</td>   <td>55636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:23</td>   <td>62770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/11/11 12:31:23</td>   <td>62770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">UserChangeCurrency</td> 
-  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:25</td>   <td>64534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:25</td>   <td>64534</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@23abf9c9]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/11/11 12:31:28</td>   <td>67077</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@2043b3d5]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909845674</td>   <td></td> </tr>
->>>>>>> 77bfdf79dee85fb887a9ef98a1575306eeab1508
+<tr bgcolor="c4c875">  <td>19/11/15 21:23:07</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@4b3a6383]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>19/11/15 21:23:31</td>   <td>24068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@16ec1438]">UserCanContactUs</td> 
+  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="81b0a2">  <td>19/11/15 21:23:31</td>   <td>24078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWithJavaFakerTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWithJavaFakerTestCase@4b3a6383]">UserCanReguisterSuccessfully</td> 
+  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>19/11/15 21:23:31</td>   <td>24086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@5bc971ef]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
+  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/11/15 21:23:31</td>   <td>24088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@689c5fdc]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/11/15 21:23:31</td>   <td>24096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@ed24b1d]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@225152067</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/11/15 21:23:31</td>   <td>24098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@ed24b1d]">UserChangeCurrency</td> 
+  <td>main@225152067</td>   <td></td> </tr>
 </table>
