--- a/test-output/old/nopcommerce regression suite/toc.html
+++ b/test-output/old/nopcommerce regression suite/toc.html
@@ -8,12 +8,12 @@
 <h3><p align="center">Results for<br/><em>nopcommerce regression suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>8 classes</a></td>
-<td>15 methods:<br/>
+<td>2 tests</td>
+<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td>2 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (14)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,8 +22,16 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Regression Test (15/0/0)</td><td valign='top' align='right'>
-  <a href='Regression Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>general chrome Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='general chrome Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>general firefox Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='general firefox Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
